@@ -11,6 +11,7 @@ ver 0.16.5 (2010/??/??)
   - ffmpeg: don't require key frame for seeking
   - fix CUE track seeking
 * WIN32: close sockets properly
+* install systemd service file if systemd is available
 
 
 ver 0.16.4 (2011/09/01)
